tests/scripts/type_errors/mismatched_types.roto
fn bar(a: u32, b: u32) -> bool {
	a == b
}

fn foo() {
	let a = true;
	let b = 4;
	bar(a, b);
}
